# wasm_test

./: .gitignore  CMakeLists.txt  README.md  build.sh  clay_module.js  hello.c  index.html  index2.html  main.c  serial.js
cmake/: wasi-toolchain.cmake
scripts/: setup.sh
